PUSH NOTE : 千字文注.md

--- a/source/_posts/千字文注.md
+++ b/source/_posts/千字文注.md
@@ -45,6 +45,13 @@ comments: true
 
 果珍李柰，菜重芥姜。
 海咸河淡，鳞潜羽翔。
+> 1. 柰 nai4：即沙果，也被称作花红，形似苹果，但比苹果小。
+> 2. 重：尊尚。
+> 3. 芥：种子可以研磨成芥末，作调味品。
+> 4. 姜：调味品，有辛辣味。
+> 5. 鳞潜：鱼儿在水中游。鱼有鳞片，故以鳞代指鱼类。潜，水中潜游。
+> 6. 羽翔：鸟儿在天空中飞翔。鸟儿的翅膀为羽毛，故以羽代指鸟。
+
 龙师火帝，鸟官人皇。
 始制文字，乃服衣裳。
 推位让国，有虞陶唐。
