PUSH NOTE : 千字文注.md

--- a/source/_posts/千字文注.md
+++ b/source/_posts/千字文注.md
@@ -54,30 +54,76 @@ comments: true
 
 龙师火帝，鸟官人皇。
 始制文字，乃服衣裳。
+> 1. 龙师：指太昊伏羲。《左传·昭公十七年》：“太昊氏以龙纪，故为龙师而龙名。”
+> 2. 火帝：炎帝，以火德王，以火名官。一说火帝指的是钻木取火的燧（sui 4）人氏。
+> 3. 鸟官：即少昊氏。黄帝之子少昊氏所封百官都带鸟字。
+> 4. 人皇：传说上古部落联盟领袖，与天皇、地皇合你三皇。
+> 5. 始制文字：黄帝时，史官仓颉创造了文字。
+> 6. 乃服衣裳：黄帝时嫘祖发明养蚕，制造衣服。衣裳：衣服的总称，上为衣下为裳。
+
 推位让国，有虞陶唐。
 吊民伐罪，周发殷汤。
+> 1. 推位让国：禅让帝位。三代禅让，唐尧把天子之位让给虞舜，虞舜把天子之位禅让给夏禹。推和让都是辞让、禅（shan 4）让的意思。
+> 2. 有虞：即舜。帝尧将君位禅让于帝舜。舜帝，姚姓，名重华，号有虞氏。
+> 3. 陶唐：尧帝，姓尹祁，名放勋，因封于唐，称唐尧，因其曾被封于陶和唐，故又称陶唐。
+> 4. 吊：慰问，抚恤。伐：征讨，讨伐。
+> 5. 周发：周武王姬发。
+> 6. 殷汤：商汤，也叫成汤。
+
 坐朝问道，垂拱平章。
 爱育黎首，臣伏戎羌。
 遐迩一体，率宾归王。
+> 1. 坐朝：君主坐在朝堂上，指听取并处理政事。
+> 2. 问道：请教治国的道理。
+> 3. 垂拱：垂衣拱手，什么都不做。常用来赞颂君主无为而治。
+> 4. 平章：辨别彰明。平者正之，使不倾；章者明之，使不昧。也作筹划之意，指将国家治理得很好。《尚书·尧典》：“九族既睦，平章百姓。”
+> 5. 爱：关怀。
+> 6. 育：养育，教化。
+> 7. 黎首：黎民黔首，指百姓。黎：黑色。首：头。古代百姓庶民不能着衣冠，露出黑色的头发，故用黎首指庶民、百姓。
+> 8. 戎羌：我国古代的两个少数民族，这里指代少数民族，泛指其他民族。旧有东夷、南蛮、西戎、北狄之说。
+> 9. 遐而：远近。一体：一样，一同。指无论远近都归一成为整体。
+> 10. 率宾：指四海之内。归：归顺。
+
 鸣凤在竹，白驹食场。
 化被草木，赖及万方。
+> 1. 鸣凤在竹：凤为灵禽，只出现于有道之世。相传，凤以竹为食，故出现于竹林间。
+> 2. 白驹食场：白驹食于苗场。
+> 3. 化被草木：德化遍及草木。这里比喻有道君主的德泽。
+> 4. 赖及万方：恩典遍及万方。赖，利，这里是恩典的意思。
+
 盖此身发，四大五常。
 恭惟鞠养，岂敢毁伤。
+> 1. 身发：身体发肤。
+> 2. 四大：有两种说法，一种指地、水、火、风，这是印度哲学中的概念，经由佛教传入中国，佛教认为这四种元素构成万物。四大也用来代指身体。第二种则是道教的概念，意为道、天、地、王（一说人），此说法出自老子。
+> 3. 五常：有多种解释。第一种，父义、母慈、兄友、弟恭、子孝；第二种、君臣、父子、兄弟、夫妻、朋友；第三种、仁、义、礼、智、信；第四种，金、木、水、火、土。
+
 女慕贞洁，男效才良。
 知过必改，得能莫忘。
 罔谈彼短，靡恃己长。
 信使可覆，器欲难量。
+> 1. 得能莫忘：受到别人的恩惠不能忘怀。能，这里是恩惠、好处的意思。
+> 2. 器欲难量：气度深广，难以测量。
+
 墨悲丝染，诗赞羔羊。
 景行维贤，克念作圣。
 德建名立，形端表正。
+> 1. 墨悲丝染：墨子，墨家学派创始人。悲，悲叹。《墨子·所染》：“子墨子言见染丝者而汉曰：‘染于苍则苍，染于黄则黄。所入者变，其色亦变。’”意思是墨家学派的创始人墨子感叹人如白丝，原因纯洁质朴，可一旦染了颜色，便失去了本来面目，想恢复本性已来不及。
+> 2. 诗赞羔羊：意指《诗经·召南·羔羊》，这篇诗歌以羔羊皮毛的洁白无瑕来比喻君子德行的纯洁。《毛传》：“在位皆节俭正直，德如羔羊也。”
+
+
+
 空谷传声，虚堂习听。
 祸因恶积，福缘善庆。
 尺璧非宝，寸阴是竞。
+
 资父事君，曰严与敬。
 孝当竭力，忠则尽命。
+
 临深履薄，夙兴温凊。
 似兰斯馨，如松之盛。
 川流不息，渊澄取映。
+> 1. 似兰斯馨，如松之盛：像幽兰一样幽香，像松树一样茂盛。
+
 容止若思，言辞安定。
 笃初诚美，慎终宜令。
 荣业所基，籍甚无竟。
