PUSH NOTE : 千字文注.md

--- a/source/_posts/千字文注.md
+++ b/source/_posts/千字文注.md
@@ -110,8 +110,6 @@ comments: true
 > 1. 墨悲丝染：墨子，墨家学派创始人。悲，悲叹。《墨子·所染》：“子墨子言见染丝者而汉曰：‘染于苍则苍，染于黄则黄。所入者变，其色亦变。’”意思是墨家学派的创始人墨子感叹人如白丝，原因纯洁质朴，可一旦染了颜色，便失去了本来面目，想恢复本性已来不及。
 > 2. 诗赞羔羊：意指《诗经·召南·羔羊》，这篇诗歌以羔羊皮毛的洁白无瑕来比喻君子德行的纯洁。《毛传》：“在位皆节俭正直，德如羔羊也。”
 
-
-
 空谷传声，虚堂习听。
 祸因恶积，福缘善庆。
 尺璧非宝，寸阴是竞。
@@ -127,29 +125,65 @@ comments: true
 容止若思，言辞安定。
 笃初诚美，慎终宜令。
 荣业所基，籍甚无竟。
+> 1. 荣业：盛大的功业。基：本，依靠。
+> 2. 籍甚：盛大。无竟：没有穷尽。
+
 学优登仕，摄职从政。
 存以甘棠，去而益咏。
+
 乐殊贵贱，礼别尊卑。
 上和下睦，夫唱妇随。
+
 外受傅训，入奉母仪。
 诸姑伯叔，犹子比儿。
 孔怀兄弟，同气连枝。
 交友投分，切磨箴规。
+> 1. 外受傅训：出外接受师傅的教诲。
+> 2. 孔怀：非常关怀。孔：很，过甚。怀：思念，想念。
+
 仁慈隐恻，造次弗离。
 节义廉退，颠沛匪亏。
 性静情逸，心动神疲。
 守真志满，逐物意移。
 坚持雅操，好爵自縻。
+
 都邑华夏，东西二京。
 背邙面洛，浮渭据泾。
+> 1. 都邑华夏：华夏都邑。华夏：中国。都邑：京都，京城。
+> 2. 东西二京：指东都洛阳和西京长安。西京长安，义如其名，正是“长治久安”的意思，有“古都之首”的美誉，更是与开罗、雅典、罗马并称为“世界四大古都”。东京洛阳，也称“千年帝都”，洛河两岸分布着二里头夏都遗址、偃师商都、东周王城、汉魏古城、隋唐洛阳城等五大都城遗址，历史极为悠久。
+> 3. 浮渭居泾：指长安左邻渭水，右靠泾水。
+
 宫殿盘郁，楼观飞惊。
 图写禽兽，画彩仙灵。
 丙舍旁启，甲帐对楹。
+> 1. 盘郁：曲折美盛的样子。
+> 2. 楼观：高大富丽的建筑物。
+> 3. 飞惊：形容建筑物高耸入云，令人惊叹。
+> 4. 图写禽兽，画彩仙灵：指宫殿楼阁画满彩色禽异兽和神仙形状。图、写，都是画的意思。
+> 5. 丙舍：后汉宫中正室两旁的房屋，基第三等称丙舍。
+> 6. 甲帐：汉武帝所造，用琉璃、夜光珠等为装饰，来供奉神灵的帐幕。
+> 7. 对楹：指堂前一左一右相对的柱子。
+
 肆筵设席，鼓瑟吹笙。
 升阶纳陛，弁转疑星。
+> 1. 肆筵设席：陈设筵席。肆，陈设。
+> 2. 鼓瑟吹笙：指弹奏美妙的音乐以接待宾客。
+> 3. 升阶纳陛：指登上宫廷的台阶。升、纳，都是登的意思。阶、陛，都是台阶的意思。
+> 4. 弁（bian 4）转疑星：缀有珠玉的礼帽转动，好像满天的星斗闪烁一样。弁，古代男子戴的一种冠。有皮弁，爵弁之分。弁，本意是指古代一种尊贵的冠，也指掌管帝王的冕服及等制，又比喻首领、魁首。该文字在《仪礼·士冠礼》和《广韵》等文献均有记载。
+
 右通广内，左达承明。
 既集坟典，亦聚群英。
 杜稿钟隶，漆书壁经。
+> 1. 广内：西汉宫廷藏书的地方，在建章宫中。后来泛指君王的藏书处。
+> 2. 达，到达。
+> 3. 承明：汉代宫殿名，位于未央宫中。承明殿旁边设有承明庐，为侍臣值宿所居之处。
+> 4. 既集坟典，亦聚群英：指广内、承明等殿，既收藏了书籍，又聚集了众多才俊。
+> 5. 坟典：即《三坟》《五典》，相传为中国最古老的书籍，分别记载了“三皇”、“五帝”的事迹。
+> 6. 杜稿：杜度的草书手稿。杜度，东汉人，能作文，善草书。
+> 7. 锤隶：指三国时锤繇（yao 1）的隶书。锤繇，字元常，工书法，尤精隶楷。
+> 8. 漆书：在竹木简上用漆书写的图书。
+> 9. 壁经：指鲁恭王刘余从孔子旧宅墙壁中得到的用古文写成的经书。
+
 府罗将相，路侠槐卿。
 户封八县，家给千兵。
 高冠陪辇，驱毂振缨。
