PUSH NOTE : 千字文注.md

--- a/source/_posts/千字文注.md
+++ b/source/_posts/千字文注.md
@@ -1,5 +1,4 @@
 ---
-uuid: 151f25c0-233f-11f0-b969-2d2358f21799
 tags:
   - note
   - 经典
@@ -22,7 +21,7 @@ comments: true
 
 天地玄黄，宇宙洪荒。
 日月盈昃，辰宿列张。
-> 1. 玄黄：天地的颜色。
+> 1. 玄黄：天地的颜色。玄，接近黑色的深青色。宇宙：指整个时间和空间，又指天地。
 > 2. 盈：满。
 > 3. 昃：倾斜。
 > 4. 辰：星辰。
@@ -187,57 +186,171 @@ comments: true
 
 府罗将相，路侠槐卿。
 户封八县，家给千兵。
+> 1. 府：公卿相聚之所。罗，罗列。将相，文武大臣。
+> 2. 路，道路。侠，即夹，夹道。
+> 3. 槐卿：指三公九卿，泛指高级官员。周朝时，朝廷中三槐九棘，公卿大夫分坐其下，三公坐三槐之下，九卿坐九棘之下，此后用槐、棘分别代指三公、九卿。
+> 4. 家：公卿之家。给：供养。
+
 高冠陪辇，驱毂振缨。
 世禄侈富，车驾肥轻。
 策功茂实，勒碑刻铭。
+> 1. 高冠陪辇：卫士陪侍护卫皇帝。高冠，指卫士。辇，古代天子所乘坐的车。
+> 2. 驱毂：乘车上朝，即驾车。毂，车轮中心的圆木，缨，帽子系带。
+> 3. 禄：指因官爵而得到的财富（爵禄）。侈富：豪富。
+> 4. 车驾肥轻：车驾华丽轻快。肥轻：“肥马轻裘”的略称。
+> 5. 策功：记功。茂：劝勉，鼓励。实：这里指功业。勒：刻。铭：碑。
+
 磻溪伊尹，佐时阿衡。
 奄宅曲阜，微旦孰营。
+> 1. 磻溪：指姜太公吕尚。曾垂钓于磻溪。
+> 2. 伊尹：原为商汤妻有辛氏的陪嫁奴隶。后辅佐商汤灭夏桀。
+> 3. 佐时：辅佐当世之君治理国家。
+> 4. 阿衡：官名，相传伊尹曾任此职，辅佐商汤，主持朝政。
+> 5. 奄宅曲阜，微旦孰营：指平定曲阜后，没有周公旦谁来治理呢。奄宅，攻取平定。微，没有，表假设。营，经营，治理。周武王封周公旦于曲阜。
+
 桓公匡合，济弱扶倾。
 绮回汉惠，说感武丁。
 俊乂密勿，多士寔宁。
+> 1. 桓公匡合：指齐桓公集合众力，匡正天下。.
+> 2. 绮：绮里季，“商山四皓”（绮里季、东园公、夏黄公、甪里先生）之一，这里用绮里季代指商山四皓。
+> 3. 汉惠：汉惠帝刘盈。
+> 4. 说：傅说。殷高祖武丁的宰相。
+> 5. 感：梦感，指商王武丁梦见圣人，后果然找到傅说以辅佐国政，国大治。
+> 6. 俊：乂才德出众的人。密勿：黾勉，努力。
+> 7. 多士寔宁：国家有众多人才就会安宁。寔，同“实”。
+
 晋楚更霸，赵魏困横。
 假途灭虢，践土会盟。
 何遵约法，韩弊烦刑。
+> 1. 晋楚更霸：齐桓公、晋文公、秦穆公、楚庄王、宋襄公相继称霸，史称春秋五霸。
+> 2. 赵魏困横：赵魏困于连横。六国合纵抗秦，秦以连横抵抗。
+> 3. 假途灭虢：春秋时，晋献公借道灭虢国，回师时又灭虞国的故事。
+> 4. 践土会盟：晋文公城濮之战大胜楚国后，会集诸侯盟于践土，成就其霸主地位。践土，春秋时郑地，在今河南原阳县。
+> 5. 何遵约法：指萧何在刘邦约法三章的基础上重新制定刑律九章。
+> 6. 韩：即韩非子。
+
 起翦颇牧，用军最精。
 宣威沙漠，驰誉丹青。
+> 1. 起翦颇牧：白起、王翦、廉颇、李牧。
+> 2. 宣威沙漠，驰誉丹青：这两句指两汉而言。
+
 九州禹迹，百郡秦并。
 岳宗泰岱，禅主云亭。
+> 1. 禹：大禹。
+> 2. 百郡秦并：秦始皇吞并六国，统一天下，推行郡县制。
+> 3. 禅：封禅。
+> 4. 云亭：指云云山和亭亭山，它们是位于泰山南侧的支脉，是古代皇帝祭地的地方。
+
 雁门紫塞，鸡田赤城。
 昆池碣石，钜野洞庭。
 旷远绵邈，岩岫杳冥。
+> 1. 雁门：雁门关。
+> 2. 紫塞：指长城。长城之土皆紫，故以紫塞代指长城。
+> 3. 鸡田：古代驿站名，位于今宁夏灵武境内。
+> 4. 赤城：相传是蚩尤居住的地方。
+> 5. 昆池：即滇池，又名昆明湖，位于云南昆明西南。
+> 6. 碣石：碣石山，位于今河北昌黎北。
+> 7. 巨野：古代大湖泽名，又称大野泽，位于今山东巨野北，已经干涸。
+> 8. 洞庭：洞庭湖。
+> 9. 岩岫杳冥：指洞穴深暗。岩岫，深广的洞穴。
+
 治本于农，务兹稼穑。
 俶载南亩，我艺黍稷。
 税熟贡新，劝赏黜陟。
+> 1. 稼穑（se 4）：泛指农业劳动。务：从事于。兹：此，这个。
+> 2. 俶（chu 4）：开始。载：从事，劳作。南亩：农田。
+> 3. 黍稷：泛指五谷等农作物。
+
 孟轲敦素，史鱼秉直。
 庶几中庸，劳谦谨敕。
+> 1. 敦素：敦厚素雅。
+> 2. 史鱼：春秋时卫国大夫，以直谏著称。
+> 3. 劳谦：辛劳谦虚。谨敕：谨慎。
+
 聆音察理，鉴貌辨色。
 贻厥嘉猷，勉其祗植。
+> 1. 聆：聆听。音：这里指言语。察：审，体察。理：指所有表达的意思。
+> 2. 鉴：观察。貌：容貌。辨：辨别。色：神情。
+> 3. 贻：赠给。厥：其。嘉猷（you 2）：善谋，妙法。
+> 4. 祇（zhi 1）：敬。植：树立。
+
 省躬讥诫，宠增抗极。
+> 1. 躬：反躬自省。讥、诫：劝诫。
+> 2. 抗极：亢极，炽盛。
+
 殆辱近耻，林皋幸即。
 两疏见机，解组谁逼。
 索居闲处，沉默寂寥。
+> 1. 林皋 ：山林和水边地，引申为退隐之地。幸：侥幸。即：靠近。
+> 2. 两疏：指西汉疏广、疏受两叔侄。见机：根据形势决定。
+> 3. 解组谁逼：意谓疏辞官归隐是自己的选择，没有人逼迫。组：系官印的绶带，代指官印或官位。
+> 4. 索居：孤独散居。
+
 求古寻论，散虑逍遥。
 欣奏累遣，戚谢欢招。
+> 1. 散虑：排解、遣散思虑杂念。
+> 2. 欣奏累遣：奏欣遣累。奏：进。欣：欢悦。遣：排除。累：拘系，劳累。
+
 渠荷的历，园莽抽条。
 枇杷晚翠，梧桐早凋。
 陈根委翳，落叶飘摇。
 游鹍独运，凌摩绛霄。
+> 1. 渠荷：水沟中的荷花。
+> 2. 的历：光亮鲜明、光彩烂灼的样子。
+> 3. 莽：茂盛的草。抽条：长出新的叶子。
+> 4. 晚翠：是说枇杷耐寒，冬季树叶也是翠绿的。
+> 5. 陈根：逾年的宿草。委翳：萎谢。
+> 6. 落叶飘摇：枯落的树叶飘荡飞舞。
+> 7. 鹍（kun 1）：中国古代指像鹤的一种大鸟。运：飞翔。
+> 8. 凌摩：升入空中。摩，摩空之意，指逼近空中。绛宵：又名紫霄，古代神话中的[九霄](1%20Project/book/千字文/资料/九霄.md)之一。
+
 耽读玩市，寓目囊箱。
 易輶攸畏，属耳垣墙。
+> 1. 耽：沉溺。玩市：市场。寓目：观看。囊箱：装书的箱子。
+> 2. 易：轻忽。輶（you 2）：古代一种轻便的车子，此处引申为轻。攸（you 1）：所。畏：畏惧，有戒心。
+> 3. 属（zhu 3）：附着。垣：矮墙。此句出自《[诗经](https://shijing.5000yan.com/)·小雅·小弁》：“君子无易由言，耳属于垣。”意思是说，君子要小心言论，即使有墙相隔，也会有人将耳朵贴在墙上偷听。
+
 具膳餐饭，适口充肠。
 饱饫烹宰，饥厌糟糠。
 亲戚故旧，老少异粮。
+> 1. 具：准备。膳：饭食，一般指肉食。
+> 2. 饱饫（yu 4）烹宰：不挨饿的人鸡鸭鱼肉才能使其满足。饫：满足。
+> 3. 饥厌糟糠：饥饿的人糟糠食物就可以令他满足。厌：满足。糟：酒渣。糠：指谷子的外壳。
+> 4. 亲戚故旧，老少异粮：要区分亲戚故旧中老者和少年的食物。
+
 妾御绩纺，侍巾帷房。
 纨扇圆絜，银烛炜煌。
 昼眠夕寐，蓝笋象床。
+> 1. 御：从事。绩纺：纺织。侍：陪从在位尊者身边。帷房：张挂布幔的内室、闺房。
+> 2. 纨扇：用白色细绢制作的扇子。
+> 3. 絜（jie 2）：同洁，光洁，指扇子的质地。
+> 4. 银烛：精美的白色蜡烛。
+> 5. 炜煌：指烛光明亮辉煌。
+
 弦歌酒宴，接杯举觞。
 矫手顿足，悦豫且康。
+> 1. 弦：指丝竹一类的弦乐器。接：接受。
+> 2. 矫手顿足：犹言手舞足蹈，形容高兴欢乐。
+
 嫡后嗣续，祭祀烝尝。
 稽颡再拜，悚惧恐惶。
+> 1. 嫡：古代正妻所生拥的继承权的长子。后：后代。嗣、续 ：都是继承的意思。
+> 2. 祭祀烝尝：指祭祀供奉神灵和祖先的仪式有烝祭和尝祭。秋天的祭祀仪式称尝，冬天的祭祀仪式称烝。
+> 3. 稽（qi 3）颡（sang 3）再拜，悚惧恐惶：指行跪拜大礼的时候，心情要惶恐敬慎，极度虔诚。
+
 笺牒简要，顾答审详。
 骸垢想浴，执热愿凉。
+> 1. 笺：细窄的条形竹片，可用来记写简短文字。
+> 2. 牒：古代书写用的本片或竹片，也指公文。
+> 3. 顾答审详：回答别人的提问越详细越好。顾答：回答。审详：详细。
+> 4. 骸：身体。
+> 5. 垢：污垢。
+> 6. 执热：酷热。
+
 驴骡犊特，骇跃超骧。
 诛斩贼盗，捕获叛亡。
+> 1. 骡：俗称“马骡”，由公驴和母马交配所产。犊：小牛。特：成年公牛。
+
 布射僚丸，嵇琴阮啸。
 恬笔伦纸，钧巧任钓。
 释纷利俗，并皆佳妙。
