PUSH NOTE : 周郑交质（《左传》）.md

--- a/source/_posts/周郑交质（《左传》）.md
+++ b/source/_posts/周郑交质（《左传》）.md
@@ -11,30 +11,32 @@ share: "true"
 title: 
 comments: true
 ---
-> [周郑交质（左丘明著历史散文）\_百度百科](https://baike.baidu.com/item/%E5%91%A8%E9%83%91%E4%BA%A4%E8%B4%A8/9002831?fromModule=lemma_inlink)
-
-**人物关系：**
+**人物：**
 
 周平王：
 郑武公：卿士（执政官）。
 郑庄公：卿士。
-虢：批西虢公，周王室卿士。
+虢：西虢公，周王室卿士。
 王子狐：姬狐，周平王次子。史称“王子狐”。
 郑公子忽：郑庄公的太子，后即位为昭公。
-郑祭足：即祭仲，郑国大夫。
+郑祭足：祭仲，郑国大夫。
 
 
-**故事背景：**
+**故事：**
 
 郑庄公觉得周平王重用西虢公，周平王为了缓解矛盾，取信郑庄公，于是互相交换人质。【王子狐为质于郑，郑公子忽为质于周】
 
 周平王死后，周朝又把国政交给西虢了。郑国不乐意了，于是，有了两次收周庄稼的事情。【四月，郑祭仲帅师取温之麦。秋，又取成周之禾】从此，周郑便结仇了。【周郑交恶】
 
 
-**作品鉴赏：**
-
+**鉴赏：**
 
 相互之间的了解和信任要建立在彼此体谅、坦诚相待的基础上。【信为由中，质无益也】
 
-郑庄公咄咄逼人，交质本身是平等关系才有的事。一个诸侯国竟然与周交质，东周已经礼崩乐坏了。
+郑庄公咄咄逼人，交质本身是平等关系才有的事。一个诸侯国竟然与周交质，东周已经礼崩乐坏，也没有能力约束诸侯国了。
+
+
+**原文：**
+
+[周郑交质（左丘明著历史散文）\_百度百科](https://baike.baidu.com/item/%E5%91%A8%E9%83%91%E4%BA%A4%E8%B4%A8/9002831?fromModule=lemma_inlink)
 
