PUSH NOTE : 周郑交质（《左传》）.md

--- a/source/_posts/周郑交质（《左传》）.md
+++ b/source/_posts/周郑交质（《左传》）.md
@@ -13,7 +13,7 @@ comments: true
 ---
 **人物：**
 
-周平王：
+周平王：周天子，周幽王之子。
 郑武公：卿士（执政官）。
 郑庄公：卿士。
 虢：西虢公，周王室卿士。
@@ -24,9 +24,9 @@ comments: true
 
 **故事：**
 
-郑庄公觉得周平王重用西虢公，周平王为了缓解矛盾，取信郑庄公，于是互相交换人质。【王子狐为质于郑，郑公子忽为质于周】
+东周初期，郑国积极服侍周王室，和周天子建立了良好的君臣关系。后来，周平王宠信西虢公，周王室和郑国的关系开始恶化，周平王为了缓解矛盾，取信郑庄公，于是发生了互相交换人质的事情。【王子狐为质于郑，郑公子忽为质于周】
 
-周平王死后，周朝又把国政交给西虢了。郑国不乐意了，于是，有了两次收周庄稼的事情。【四月，郑祭仲帅师取温之麦。秋，又取成周之禾】从此，周郑便结仇了。【周郑交恶】
+周平王驾崩，周朝又把国政交给西虢了。郑国不乐意了，于是，有了两次收周庄稼的事情。【四月，郑祭仲帅师取温之麦。秋，又取成周之禾】从此，周郑便结仇了。【周郑交恶】
 
 
 **鉴赏：**
