PUSH NOTE : 秦王扫六合.md

--- a/source/_posts/秦王扫六合.md
+++ b/source/_posts/秦王扫六合.md
@@ -2,6 +2,7 @@
 tags:
   - note
   - blog
+  - 资治通鉴
 share: "true"
 categories:
   - essay
@@ -9,7 +10,6 @@ title:
 date: 2025-10-24,22:44
 comments: true
 ---
-
 
 ==**秦王扫六合中的“六合”指的是战国时期被秦国灭亡的六个诸侯国：齐、楚、燕、韩、赵、魏**‌==
 
