PUSH NOTE : 关于传国玉玺印文的几种说法.md

--- a/source/_posts/关于传国玉玺印文的几种说法.md
+++ b/source/_posts/关于传国玉玺印文的几种说法.md
@@ -11,12 +11,8 @@ title:
 comments: true
 ---
 
-传国玉玺的印文以“受命于天，既寿永昌”的说法最为普遍￼￼￼。
+传国玉玺的印文以“受命于天，既寿永昌”的说法最为普遍。
 
-据众多文献记载，秦始皇命丞相李斯以鱼虫篆书书写这八个字，玉工孙寿将其刻于传国玉玺之上￼￼￼。不过，也有一些文献如《宋书·礼志》等记载其印文为“受天之命，皇帝寿昌”￼￼￼。此外，《汉书》中还记载有“昊天之命，皇帝寿昌”的说法￼￼￼。
+据众多文献记载，秦始皇命丞相李斯以鱼虫篆书书写这八个字，玉工孙寿将其刻于传国玉玺之上￼￼￼。不过，也有一些文献如《宋书·礼志》等记载其印文为“受天之命，皇帝寿昌”￼￼￼。此外，《汉书》中还记载有“昊天之命，皇帝寿昌”的说法。
 
 综合来看，“受命于天，既寿永昌”这一说法在历史传承中更为常见，被大多数人所认可。
-
-[[关于传国玉玺印文的几种说法|关于传国玉玺印文的几种说法]]
-
-[[秦王扫六合|秦王扫六合]]
